--- a/logging_config.ini
+++ b/logging_config.ini
@@ -11,12 +11,11 @@ keys=formatter
 level=DEBUG
 handlers=file_handler
 
-
 [handler_file_handler]
-class=TimedRotatingFileHandler
+class=handlers.TimedRotatingFileHandler
 level=INFO
 formatter=formatter
-args=('/tmp/ethereum_statistics.log', when='D', interval=1, backupCount=7)
+args=('/tmp/ethereum_statistics.log', "D", 1, 7,)
  
 [formatter_formatter]
 format=%(asctime)s %(name)s %(levelname)s %(message)s
